# gym_api

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
gym_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
gym_api/routers/: auth.py  users.py  workout.py
gym_api/routers/gym/: __init__.py  exercise.py  workout_exercise.py  workout_session.py
migrations/: env.py
migrations/versions/: 1a51fe0b249c_create_users_table.py  ae2ff8e036bc_initial_schema.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py  test_workout.py
tests/gym/: test_exercise.py  test_workout_exercise.py  test_workout_session.py
